--- a/About.html
+++ b/About.html
@@ -48,6 +48,9 @@
             </ul>
           </li>
           <li class="nav-item">
+            <a class="nav-link" style="color: white;" href="array.html">array</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" style="color: white;" href="Contact.html">contact</a>
           </li>
           <li class="nav-item">
