--- a/Contact.html
+++ b/Contact.html
@@ -45,6 +45,9 @@
               </li>
               <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
+            <li class="nav-item">
+              <a class="nav-link" style="color: white;" href="array.html">array</a>
+            </li>
           </li>
           <li class="nav-item">
             <a class="nav-link active" style="color: white;" href="Contact.html">contact</a>
