--- a/array.html
+++ b/array.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" style="color: white;" aria-current="page" href="#">HOME</a>
+                  <a class="nav-link" style="color: white;" aria-current="page" href="#">HOME</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" style="color: white;" href="Sandbox.html">sandbox</a>
@@ -44,13 +44,13 @@
                   </ul>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link active" style="color: white;" href="array.html">array</a>
+                  </li>
+                <li class="nav-item">
                   <a class="nav-link" style="color: white;" href="Contact.html">contact</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" style="color: white;" href="About.html">about</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" style="color: white;" href="array.html">array</a>
                 </li>
               </ul>
             </div>
