--- a/rstiTexts.html
+++ b/rstiTexts.html
@@ -68,6 +68,7 @@
                     </tr>
                 </thead>
                 <tbody id="ochreTableBody">
+                  <a href="#" title="photograph" onclick="showImage()">test</a>
 
                 </tbody>
             </table>
