--- a/rstiTexts.html
+++ b/rstiTexts.html
@@ -55,6 +55,10 @@
         </div>
       </nav>
     <!-- table -->
+    <div class="container" style="color: aliceblue;">
+      <h3>Click on a text name to view images!</h3>
+      <h4 style="color: aquamarine;">Refresh the page to start over.</h4>
+    </div>
     <div class="container mt-3">
         <div id="title"></div>
 
