--- a/array.html
+++ b/array.html
@@ -12,7 +12,7 @@
     <title>Document</title>
     <script src="js/sampleJS.js"></script>
 </head>
-<body style="background-color: #51304e;">
+<body style="background-color: rgb(72,22,53)">
         <!-- navbar -->
         <nav class="navbar navbar-expand-md navbar-dark bg-gradient">
           <a class="navbar-brand" style="color: aquamarine" href="#">Meow</a>
@@ -28,6 +28,9 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" style="color: white;" href="Sandbox.html">sandbox</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" style="color: white;" href="ami.html">DESIGN A FUTURE BIRD</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" style="color: white;" href="#" id="navbarDropdown" role="button"
