--- a/map.html
+++ b/map.html
@@ -20,7 +20,7 @@
   <title>Document</title>
 </head>
 
-<body class="bg-gradient" style="background-color: #51304e;">
+<body class="bg-gradient" style="background-color: rgb(72,22,53);">
   <nav class="navbar navbar-expand-md navbar-dark bg-gradient">
     <a class="navbar-brand" style="color: aquamarine" href="#">Meow</a>
     <div class="container-fluid">
@@ -35,6 +35,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" style="color: white;" href="Sandbox.html">sandbox</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: white;" href="ami.html">DESIGN A FUTURE BIRD</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" style="color: white;" href="#" id="navbarDropdown" role="button"
