--- a/rstiTexts.html
+++ b/rstiTexts.html
@@ -14,7 +14,7 @@
     integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
     crossorigin="anonymous"></script>
 </head>
-<body onload="loadXML()" style="background-color: #51304e;">
+<body onload="loadXML()" style="background-color: rgb(72,22,53)">
     <nav class="navbar navbar-expand-md navbar-dark bg-gradient">
         <a class="navbar-brand" style="color: aquamarine" href="#">Meow</a>
         <div class="container-fluid">
@@ -29,6 +29,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" style="color: white;" href="Sandbox.html">sandbox</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" style="color: white;" href="ami.html">DESIGN A FUTURE BIRD</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" style="color: white;" href="#" id="navbarDropdown" role="button"
