--- a/final.html
+++ b/final.html
@@ -14,6 +14,6 @@
 <body>
     <script src="/js/AMI final.js"></script>
     <!-- <script src="/js/snake.js"></script> -->
-    <p>Move your right elbow to find your ideal bird shape!</p>
+    <p>Move around to make your ideal bird!</p>
 </body>
 </html>
